fix github icon spacing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -246,10 +246,6 @@ body {
       }
     }
 
-    .fa-github {
-      left: 1px;
-    }
-
     i {
       position: relative;
       top: -3px;
